Fixed some alignment on Home.

--- a/frontend/my-app/src/App.css
+++ b/frontend/my-app/src/App.css
@@ -1,12 +1,20 @@
 :root {
+    --ss-pale-green: #b6ebdb;
     --ss-light-green: #77ffa0;
     --ss-medium-green: #07bd65;
     --ss-dark-green: #06904d;
+    --ss-light-teal: #09d3ac;
     --ss-teal: #00aaaa;
-    --ss-light-teal: #00cccc;
     --ss-orange: #cc6600;
-    --ss-gray: #999999;
     --ss-light-gray: #dddddd;
+    --ss-gray: #999999;
+    --ss-dark-gray: #232323;
+    --ss-light-red: #e53935;
+    --ss-red: #b81d1a;
+    --ss-dark-red: #962321;
+    --ss-light-gold: #fdd835;
+    --ss-gold: #b69504;
+    --ss-dark-gold: #997d00;
 }
 
 .App {
@@ -92,7 +100,7 @@ p.howto {
 }
 
 .App-link {
-    color: #09d3ac;
+    color: var(--ss-light-teal);
 }
 
 /* Style for search bar, source: https://www.w3schools.com/howto/howto_css_searchbar.asp */
@@ -250,8 +258,8 @@ p.howto {
 /**************** Meet the team section ****************/
 
 .meetTheTeam {
-    padding: 50px 50px 600px 60px;
-    background-image: linear-gradient( #b6ebdb , rgb(7, 189, 101, .2));
+    /*padding: 50px 50px 600px 60px;*/
+    background-image: linear-gradient( var(--ss-pale-green) , rgb(7, 189, 101, .2));
     /* background-color: rgb(7, 189, 101, .2); */
 }
 .usericon {
@@ -433,7 +441,7 @@ p.howto {
     max-height: 100%;
     min-height: 100%;
     min-width: 20%;
-    background-color: #e0e0e0;
+    background-color: var(--ss-light-gray);
     overflow: hidden;
 }
 
@@ -443,8 +451,8 @@ p.howto {
 }
 
 .AddminHomeHeader {
-    background-color : #1a6631;
-    color: rgb(231, 231, 231);
+    background-color : var(--ss-dark-green);
+    color: var(--ss-light-gray);
     text-align: right;
     font-size: 20px;
     padding : 20px;
@@ -461,7 +469,7 @@ p.howto {
     list-style-type: none;
     margin : 0px;
     padding: 0px;
-    background-color: #232323;
+    background-color: var(--ss-dark-gray);
     height: 100%;
     width: 260px;
     float: left;
@@ -511,41 +519,41 @@ button:focus {
 }
 
 .button-yellow {
-    background-color: #fdd835;
+    background-color: var(--ss-light-gold);
     color: white;
 }
 
 .button-yellow:hover {
-    background-color: #b69504;
+    background-color: var(--ss-gold);
     color:whitesmoke;
     box-shadow: 3px 10px 20px -7px rgba(0,0,0,0.19), 0 10px 20px 0 rgba(0,0,0,0.14);
 }
 
 .button-yellow:active {
-    background-color: #997d00;
+    background-color: var(--ss-dark-gold);
     color:whitesmoke;
 }
 
 
 .button-red {
-    background-color: #e53935;
+    background-color: var(--ss-light-red);
     color: whitesmoke;
 }
 
 .button-red:hover {
-    background-color: #b81d1a;
+    background-color: var(--ss-red);
     color: whitesmoke;
     box-shadow: 3px 10px 20px -7px rgba(0,0,0,0.19), 0 10px 20px 0 rgba(0,0,0,0.14);
 }
 
 .button-red:active {
-    background-color: #962321;
+    background-color: var(--ss-dark-red);
     color:whitesmoke;
 }
 
 
 .button-green {
-    background-color: #1a6631;
+    background-color: var(--ss-dark-green);
     color: whitesmoke;
 }
 
@@ -556,7 +564,7 @@ button:focus {
 }
 
 .button-green:active {
-    background-color: #4d964d;
+    background-color: var(--ss-dark-green);
     color:whitesmoke;
 }
 
@@ -673,7 +681,7 @@ button:focus {
 
 
 .forgotpassword:hover {
-    color: rgb(124, 124, 124);
+    color: var(--ss-gray);
 }
 
 
